# rangers-sdk-csharp

./: .gitmodules  CMakeLists.txt
bindings-generator/: CMakeLists.txt  Program.cs
bindings-generator/Passes/: CheckBitsetsPass.cs  ReadonlyContainerFieldsPass.cs
bindings-generator/TypeMaps/: Base.cs  Color.cs  Containers.cs  Math.cs  Pointers.cs
rangers-sdk-csharp/: CMakeLists.txt  Containers.cs  Delegate.cs  Handle.cs  Interop.cs  Shims.cs  build-def.cmake  entry.h
rangers-sdk-csharp-wrapper/: CMakeLists.txt  entry.h
rangers-sdk-csharp/Extensions/: GameObject.cs  ResourceManager.cs
rangers-sdk-csharp/Interop/: InteropIsomorphism.cs  Memory.cs  RefTypeReplacement.cs
rangers-sdk-csharp/Reflection/: GameObjects.cs  RflClasses.cs
rangers-sdk-csharp/Replacements/: Color.cs  InplaceBitArray.cs  Pair.cs  String.cs  VariableString.cs
rangers-sdk-csharp/Replacements/Containers/: Array.cs  Constants.cs  Hashmap.cs  InplaceMoveArray.cs  LinkList.cs  MoveArray.cs  MoveArray32.cs  PointerMap.cs  RflArray.cs  StringMap.cs
rangers-sdk-native/: CMakeLists.txt  DllMain.cpp
